<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.fragment.ChangePasswordFragment">

    <LinearLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masukkan_password_anda"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnAuth"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@color/primaryVariant"
            android:text="@string/confirm_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masukkan_password_baru"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/new_password"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/etNewPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/confirm_new_password"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/primaryVariant"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>