<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/secondary"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/primaryVariant"
            app:cardCornerRadius="20dp">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/bar_chart"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="@dimen/padding_big"
                android:visibility="gone"/>
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_pick_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_mid"
        android:backgroundTint="@color/primaryVariant"
        android:text="@string/pick_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_predict_img"
        app:layout_constraintTop_toBottomOf="@id/card_view" />

    <Button
        android:id="@+id/btn_predict_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_mid"
        android:backgroundTint="@color/primaryVariant"
        android:text="@string/predict_img"
        app:layout_constraintLeft_toRightOf="@id/btn_pick_img"
        app:layout_constraintRight_toLeftOf="@id/btn_insert_db"
        app:layout_constraintTop_toBottomOf="@id/card_view" />

    <Button
        android:id="@+id/btn_insert_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_mid"
        android:backgroundTint="@color/primaryVariant"
        android:text="@string/insert_db"
        app:layout_constraintLeft_toRightOf="@id/btn_predict_img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view" />
</androidx.constraintlayout.widget.ConstraintLayout>